# IPAM

./: .dockerignore  .gitignore  Dockerfile  PROJECT_DOCUMENTATION.md  README-DEPLOYMENT.md  README.md  app.py  config.py  coolify.yaml  docker-compose.yaml  docker-compose.yml  forms.py  main.py  pyproject.toml  requirements.txt  seed_data.py
app/: __init__.py  cli.py  errors.py  models.py
app/routes/: __init__.py  assignments.py  auth.py  customers.py  main.py  reports.py  subnets.py
app/utils/: __init__.py  network.py
docker/: init-db.sh
docs/: COOLIFY_DEPLOYMENT.md  COOLIFY_KURULUM.md
static/css/: style.css
static/js/: main.js
templates/: base.html  dashboard.html  login.html
templates/errors/: 404.html  500.html
